--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,19 +1,22 @@
 image:
   file: .gitpod.dockerfile
 ports:
-- port: 3000 # Theia
-- port: 3030 # VS Code extension tests
-- port: 9339 # Node.js debug port
-  onOpen: ignore
-- port: 6080
-  onOpen: ignore
-- port: 5900
-  onOpen: ignore
+  - port: 3000 # Theia
+  - port: 3030 # VS Code extension tests
+  - port: 9339 # Node.js debug port
+    onOpen: ignore
+  - port: 6080
+    onOpen: ignore
+  - port: 5900
+    onOpen: ignore
 tasks:
-- init: yarn
-  command: >
-    jwm &
-    yarn --cwd examples/browser start ../.. --hostname=0.0.0.0
+  - init: yarn
+    command: >
+      jwm &
+      yarn --cwd examples/browser start ../.. --hostname=0.0.0.0
+vscode:
+  extensions:
+    - Dart-Code.dart-code@3.6.0:OIKJQXmfWHoIMVCiWrcLsQ==
 github:
   prebuilds:
     pullRequestsFromForks: true
