--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,8 +49,9 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "files.insertFinalNewline": true,
   "clang-format.language.typescript.enable": false,
+  "dart.sdkPath": "/home/gitpod/dart/dart-sdk",
   "dart.sdkPaths": [
-    "~/dart/dart-sdk",
-    "~/dart2/dart-sdk"
+    "/home/gitpod/dart/dart-sdk",
+    "/home/gitpod/dart2/dart-sdk"
   ]
 }
