--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -11,5 +11,10 @@
     "editor.tabSize": 2
   },
   "typescript.tsdk": "node_modules/typescript/lib",
-  "clang-format.language.typescript.enable": false    
+  "clang-format.language.typescript.enable": false,
+  "dart.sdkPath": "/home/gitpod/dart/dart-sdk",
+  "dart.sdkPaths": [
+    "/home/gitpod/dart/dart-sdk",
+    "/home/gitpod/dart2/dart-sdk"
+  ]    
 }
