--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -12,9 +12,5 @@
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "clang-format.language.typescript.enable": false,
-  "dart.sdkPath": "/home/gitpod/dart/dart-sdk",
-  "dart.sdkPaths": [
-    "/home/gitpod/dart/dart-sdk",
-    "/home/gitpod/dart2/dart-sdk"
-  ]    
+  "dart.flutterSdkPath": "/home/gitpod/flutter"
 }
